# FinalProject

./: .dockerignore  .gitignore  Dockerfile  README.md  frontend.py  requirements.txt
Final_Project/: .gitignore  Dockerfile  README.md  pyproject.toml
Final_Project/app/: __init__.py  rag_pipeline.py
Final_Project/data/indexes/: 0000320193_10-K.index  0000320193_10-K_meta.parquet  0001018724_10-K_meta.parquet
Final_Project/helper_lib/: xbrl.py
app/: main.py  rag_pipeline.py
data/chunks/: chunks_0000320193_10-K.parquet  chunks_0001018724_10-K.parquet
data/indexes/: 0000320193_10-K.index  0000320193_10-K_meta.parquet  0001018724_10-K.index
edgar_analyst_copilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
helper_lib/: __init__.py  edgar_parser.py  evaluator.py  finetune.py  retriever.py  utils.py  xbrl.py
